fix: Fix bugs feat: added dependency feat: set up Login Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,18 +26,18 @@ dependencies:
   shared_preferences: ^0.4.3
   fluttertoast: ^2.2.3
   random_color: ^1.0.3
+  font_awesome_flutter: ^8.4.0
+  flutter_spinkit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -48,14 +48,14 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-   - assets/images/ic_twitter.png
-   - assets/images/ic_github.png
-   - assets/images/ic_linkedin.png
-   - assets/images/ic_medium.png
-   - assets/images/ic_avatar.png
-   - assets/images/bg_image.jpg
+    - assets/images/ic_twitter.png
+    - assets/images/ic_github.png
+    - assets/images/ic_linkedin.png
+    - assets/images/ic_medium.png
+    - assets/images/ic_avatar.png
+    - assets/images/bg_image.jpg
 
-   - assets/data/currencies.json
+    - assets/data/currencies.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
